多线程与设计模式归纳总结